Destination and Datum added. Basic functionality works - for now number of ships limited due to hardware efficiency.